==================
   Not Released
==================

   ELPA:
   * For externally linked ELPA, added an option to perform single
     precision calculations.

============================
   ELSI May 2018 (v2.0.2)
============================

   ELSI:
   * Downgraged redistributed (PT-)SCOTCH source code to version 6.0.0, as
     the 6.0.5a version may lead to random crashes on some platforms.

   PEXSI:
   * Updated redistributed PEXSI source code to version 1.0.1, which fixes
     the complex inertia counting routine.

============================
   ELSI May 2018 (v2.0.1)
============================

   ELSI:
   * Switched to the semantic versioning scheme (http://semver.org).
   * Fixed building ELSI as a shared library with tests enabled.
   * Improved stability when calling PBLAS routines pdtran and pztranc.

   Known Issue:
   * Depending on the choice of k-points, the complex PEXSI solver may fail
     at the inertia counting stage.

============================
   ELSI May 2018 (v2.0.0)
============================

   ELSI:
   * CMake build system has replaced the Makefile-based system.
   * Added support for building ELSI as a shared library.
   * Added support for spin channels and k-points.
   * Added support for energy-weighted density matrix.
   * Added support for electronic entropy calculations.
   * Added support for complex sparse matrix formats for eigensolver and
     density matrix solver interfaces.
   * Removed optional variables from mutator subroutines.
   * Added matrix I/O subroutines using the MPI I/O standard.
   * Removed TOMATO dependency for the test suite.
   * Added a unified JSON output framework via the FortJSON library.

   New Solvers:
   * Added support for the SLEPc-SIPs solver (PETSc 3.8.4 and SLEPc 3.8.3
     required)
   * (Experimental) Implemented density matrix purification with dense
     linear algebra operations.

   New Matrix Storage Format: