@@ -41,6 +41,7 @@ module ELSI_MUTATOR
    public :: elsi_set_elpa_n_single
    public :: elsi_set_elpa_gpu
    public :: elsi_set_elpa_gpu_kernels
+   public :: elsi_set_elpa_autotune
    public :: elsi_set_omm_flavor
    public :: elsi_set_omm_n_elpa
    public :: elsi_set_omm_tol
@@ -350,6 +351,29 @@ subroutine elsi_set_elpa_gpu_kernels(eh,use_gpu_kernels)
       call elsi_set_elpa_gpu(eh,1)
 
       eh%ph%elpa_gpu_kernels = .true.
+   endif
+
+end subroutine
+
+!>
+!! This routine sets whether auto-tuning should be enabled in ELPA. No effect if
+!! no auto-tuning available.
+!!
+subroutine elsi_set_elpa_autotune(eh,use_autotune)
+
+   implicit none
+
+   type(elsi_handle), intent(inout) :: eh           !< Handle
+   integer(kind=i4),  intent(in)    :: use_autotune !< Use auto-tuning?
+
+   character(len=40), parameter :: caller = "elsi_set_elpa_autotune"
+
+   call elsi_check_init(eh%bh,eh%handle_init,caller)
+
+   if(use_autotune == 0) then
+      eh%ph%elpa_autotune = .false.
+   else
+      eh%ph%elpa_autotune = .true.
    endif
 
 end subroutine
